done with selection sort animation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<script src="js_files/main.js"></script>
 	<script src="js_files/bubble.js"></script>
-  <script src="js_files/visualisation.js"></script>
+  <script src="js_files/Select.js"></script>
   
 	<title>Sorting Visualizer</title>
 	<style>
@@ -41,7 +41,7 @@
       
       <span class="navbar-text">
         <button type="button" class="btn btn-light bubble sort" onclick="Bubble()" >Bubble Sort</button>
-        <button type="button" class="btn btn-light bubble sort" >Selection sort</button>
+        <button type="button" class="btn btn-light Selection sort" onClick="Select()">Selection sort</button>
         <button type="button" class="btn btn-light bubble sort" >Insertion sort</button>
         <button type="button" class="btn btn-light bubble sort" >Quick sort</button>
         <button type="button" class="btn btn-light bubble sort" >Merge sort</button>
